// reservation.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sebastianDev";
option java_outer_classname = "ReservationGrpcProto";

package reservation;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ReservationService {
  rpc CreateReservation(CreateReservationRequest) returns (ReservationResponse);
}

message CreateReservationRequest {
  string room_id = 1;
  string user_id = 2;
  google.protobuf.Timestamp check_in_date = 3;
  google.protobuf.Timestamp check_out_date = 4;
}

message ReservationResponse {
  string booking_id = 1;
  string status = 2;
}
